--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <td align="center">
           <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://web.archive.org/web/20060222234519oe_/http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="760" height="480">
             <param name="FlashVars" value="ver=1">
-            <param name="movie" value="load.swf">
+            <param name="movie" value="chat291.swf">
             <param name="quality" value="high">
             <param name="menu" value="false">
             <param name="BGCOLOR" value="#EEEEEE">
@@ -44,14 +44,13 @@
 
     <table width="760" border="0" align="center" cellpadding="10" cellspacing="0">
       <tr>
-        <td align="center" class="copyright">Club Penguin ® New Horizon Interactive. 2006. All rights reserved .
+        <td align="center" class="copyright">Club Penguin Â® New Horizon Interactive. 2006. All rights reserved .
         <a href="http://web.archive.org/web/20060415090226/http://www.clubpenguin.com/contact.htm">Contact</a> | 
         <a href="http://web.archive.org/web/20060415090226/http://www.clubpenguin.com/press/">Press</a> | 
         <a href="http://web.archive.org/web/20060415090226/http://www.clubpenguin.com/terms.htm">Terms</a> | 
         <a href="http://web.archive.org/web/20060415090226/http://www.clubpenguin.com/privacy.htm"> Privacy</a></td>
       </tr>
     </table>
-
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   </body>
-
 </html>
