--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <title>Club Penguin</title>
     <link href="css/play.css" rel="stylesheet" type="text/css">
-    
+     <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
 
   <body class="bg">
